021 ==> 375357 - No video preview.
022 ==> 375390 - "Set as Tag Thumbnail" in Tag View doesn't work.
023 ==> 375110 - Open with doesn't remember application association.
024 ==> 328457 - BQM Watermark tool : doesn't apply zero margins.
025 ==> 373756 - Display Names Are Not Updated in Regions When People Tag Changed.
026 ==> 374712 - Preview image does not work any more from thumbs view.
027 ==> 281742 - ICONVIEW : wrong selection start when browsing images.
028 ==> 375408 - Don't change context menu shortcut keys in single vs. multiple image context menus.
029 ==> 375471 - Delete Selected Albums Dialogue Contains Duplicate Paths.
030 ==> 339460 - BQM Watermark tool : add new option to support font style [patch].
031 ==> 375600 - Time Adjust Batch Queue depends on Global Metadata Setting for timestamp.
032 ==> 375627 - What is the input box under Fuzzy -> Image -> Similarity range?
033 ==> 375663 - Progress bars not initialized in ImageEditor at various places.
034 ==> 375350 - Default maintenance window too small on OSX.
035 ==> 374004 - Different Images recognised as identical images.
036 ==> 375704 - Dragging the map over the zoom slider in Marble/OSM view will unintentionally zoom out/in.
037 ==> 375749 - Crash when trying to configure table column.
038 ==> 363937 - Add option to disable thumbnails in Import window.
039 ==> 291110 - BQM Watermark tool : size original/unchanged/pixels/points.
040 ==> 375767 - In Editor switching between pictures with left/right key is reversed. Pic 1 of 80 is displayed as 80 of 80.
041 ==> 375770 - Creating tag from left panel causes error.
042 ==> 375591 - digiKam crash.
043 ==> 375700 - digiKam freezes for a long time (I/O wait) if similarity range is set too low.
044 ==> 375573 - Don't reset/destroy context after deleting one image among a set of duplicates.
045 ==> 374368 - Unchecking "Show splash screen at startup" causes no window to display at launch.
046 ==> 375809 - digiKam froze on opening Settings.
047 ==> 