@@ -2492,7 +2492,7 @@ void DigikamApp::slotEditKeys()
 
 void DigikamApp::slotShowKipiHelp()
 {
-    DXmlGuiWindow::openHandbook( QString(), QLatin1String("kipi-plugins") );
+    DXmlGuiWindow::openHandbook();
 }
 
 void DigikamApp::slotDBStat()
