@@ -1,6 +1,6 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
 <!-- NOTE: don't forget to increase version ID when this file is modified -->
-<gui version="550" name="showfoto" translationDomain="digikam" >
+<gui version="551" name="showfoto" translationDomain="digikam" >
 
 <MenuBar>
 
@@ -155,6 +155,7 @@
         <Action name="help_donatemoney" />
         <Action name="help_recipesbook"/>
         <Action name="help_contribute" />
+        <Action name="help_handbook"/>
     </Menu>
 
     <Merge/>
