@@ -57,4 +57,5 @@ BUGFIXES FROM BUGZILLA:
 044 ==> 375573 - Don't reset/destroy context after deleting one image among a set of duplicates.
 045 ==> 374368 - Unchecking "Show splash screen at startup" causes no window to display at launch.
 046 ==> 375809 - digiKam froze on opening Settings.
-047 ==> 
+047 ==> 376112 - digiKam Handbook (Menu & F1) Goes To Incorrect Location.
+048 ==> 
